--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -30,6 +30,8 @@
     "@unimodules/core": "^6.0.0",
     "apisauce": "2.0.0",
     "expo-localization": "^9.1.0",
+    "gatsby": "^2.29.2",
+    "gatsby-plugin-react-native-web": "^3.1.0",
     "i18n-js": "^3.8.0",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
