feat(branding): cloudpresser

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "author": {
     "name": "CloudPresser",
-    "email": "npm@infinite.red",
+    "email": "main@cloudpresser.com",
     "url": "https://github.com/infinitered/press"
   },
   "scripts": {
