--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "press-cli",
-  "version": "0.0.1",
+  "version": "0.0.2-rc2",
   "description": "CloudPresser's all-inclusive React Native command line tool.",
   "bin": {
     "press": "bin/press",
@@ -9,7 +9,7 @@
   "preferGlobal": true,
   "license": "MIT",
   "repository": "infinitered/press",
-  "homepage": "https://github.com/infinitered/press",
+  "homepage": "http://lab.cloudpresser.com/cloudpresser/press-cli",
   "files": [
     "boilerplate",
     "build",
@@ -20,7 +20,7 @@
   "author": {
     "name": "CloudPresser",
     "email": "main@cloudpresser.com",
-    "url": "https://github.com/infinitered/press"
+    "url": "http://lab.cloudpresser.com/cloudpresser/press-cli"
   },
   "scripts": {
     "compile": "tsc -p .",
