--- a/package.json
+++ b/package.json
@@ -1,15 +1,155 @@
 {
-    "private": true,
-    "workspaces": [
-        "packages/*"
+    "name": "cloudpresser",
+    "version": "0.0.3",
+    "description": "CloudPresser's all-inclusive React Native command line tool.",
+    "bin": {
+      "press": "bin/press",
+      "press-cli": "bin/press"
+    },
+    "preferGlobal": true,
+    "license": "MIT",
+    "repository": "infinitered/press",
+    "homepage": "http://lab.cloudpresser.com/cloudpresser/press-cli",
+    "files": [
+      "boilerplate",
+      "build",
+      "bin",
+      "README.md",
+      "template.config.js"
     ],
+    "author": {
+      "name": "CloudPresser",
+      "email": "main@cloudpresser.com",
+      "url": "http://lab.cloudpresser.com/cloudpresser/press-cli"
+    },
     "scripts": {
-        "test": "lerna run test",
-        "new-version": "lerna version --conventional-commits --yes",
-        "diff": "lerna diff"
+      "compile": "tsc -p .",
+      "build": "yarn compile",
+      "format": "npm-run-all format:*",
+      "format:js": "prettier --write '**/*.js'",
+      "format:json": "prettier --write '**/*.json'",
+      "format:md": "prettier --write '**/*.md'",
+      "format:ts": "prettier --write '**/*.ts{,x}'",
+      "lint": "eslint src test --ext .ts --fix && yarn format",
+      "test": "yarn build && yarn lint && jest --runInBand && yarn clean",
+      "watch": "jest --runInBand --watch",
+      "coverage": "jest --runInBand --coverage",
+      "ci:lint": "eslint src test --ext .ts && yarn format",
+      "ci:test": "yarn build && yarn ci:lint && jest --runInBand && yarn clean",
+      "ci:publish": "yarn build && yarn semantic-release && yarn clean",
+      "semantic-release": "semantic-release",
+      "clean": "rm -rf ./build"
+    },
+    "devEngines": {
+      "node": ">=7.x",
+      "npm": ">=4.x"
+    },
+    "dependencies": {
+      "deepmerge-json": "^1.1.0",
+      "gluegun": "^4.5.0"
     },
     "devDependencies": {
-        "lerna": "^4.0.0"
+      "@semantic-release/git": "^9.0.0",
+      "@types/jest": "^26.0.14",
+      "@types/node": "12.12.30",
+      "@typescript-eslint/eslint-plugin": "^4.10.0",
+      "@typescript-eslint/parser": "^4.10.0",
+      "babel-eslint": "^10.0.3",
+      "eslint": "^7.11.0",
+      "eslint-config-prettier": "^7.0.0",
+      "eslint-config-standard": "^16.0.2",
+      "eslint-plugin-import": "^2.22.1",
+      "eslint-plugin-node": "^11.1.0",
+      "eslint-plugin-promise": "^4.2.1",
+      "husky": "^4.3.0",
+      "jest": "^26.5.3",
+      "npm-run-all": "4.1.5",
+      "prettier": "2.1.2",
+      "semantic-release": "^17.2.1",
+      "strip-ansi": "^6.0.0",
+      "ts-jest": "^26.4.1",
+      "ts-node": "^9.0.0",
+      "typescript": "^4.1.3"
     },
-    "name": "cloud-presser"
-}
+    "eslintConfig": {
+      "parser": "@typescript-eslint/parser",
+      "extends": [
+        "prettier",
+        "plugin:@typescript-eslint/recommended",
+        "standard"
+      ],
+      "plugins": [
+        "@typescript-eslint"
+      ],
+      "globals": {
+        "__DEV__": false,
+        "jasmine": false,
+        "beforeAll": false,
+        "afterAll": false,
+        "beforeEach": false,
+        "afterEach": false,
+        "test": false,
+        "expect": false,
+        "describe": false,
+        "jest": false,
+        "it": false
+      },
+      "rules": {
+        "@typescript-eslint/ban-ts-ignore": 0,
+        "@typescript-eslint/explicit-function-return-type": 0,
+        "@typescript-eslint/explicit-member-accessibility": 0,
+        "@typescript-eslint/explicit-module-boundary-types": 0,
+        "@typescript-eslint/indent": 0,
+        "@typescript-eslint/member-delimiter-style": 0,
+        "@typescript-eslint/no-empty-interface": 0,
+        "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-object-literal-type-assertion": 0,
+        "@typescript-eslint/no-var-requires": 0,
+        "comma-dangle": 0,
+        "multiline-ternary": 0,
+        "no-undef": 0,
+        "no-unused-vars": 0,
+        "no-use-before-define": "off",
+        "quotes": 0,
+        "space-before-function-paren": 0
+      }
+    },
+    "prettier": {
+      "printWidth": 100,
+      "semi": false,
+      "singleQuote": false,
+      "trailingComma": "all"
+    },
+    "release": {
+      "plugins": [
+        "@semantic-release/commit-analyzer",
+        "@semantic-release/release-notes-generator",
+        "@semantic-release/npm",
+        "@semantic-release/github",
+        [
+          "@semantic-release/git",
+          {
+            "assets": "package.json",
+            "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+          }
+        ]
+      ]
+    },
+    "jest": {
+      "testPathIgnorePatterns": [
+        "/node_modules",
+        "/boilerplate"
+      ],
+      "testEnvironment": "node",
+      "transform": {
+        "^.+\\.ts$": "ts-jest"
+      },
+      "moduleFileExtensions": [
+        "ts",
+        "tsx",
+        "js",
+        "jsx"
+      ]
+    }
+  }
+  
