--- a/packages/boilerplate/package.json
+++ b/packages/boilerplate/package.json
@@ -11,7 +11,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "expo-yarn-workspaces postinstall"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
@@ -40,6 +41,7 @@
     "@storybook/react-native-server": "^5.3.23",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "expo-yarn-workspaces": "^1.7.0",
     "typescript": "~4.3.5"
   }
 }
