--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "devDependencies": {
         "lerna": "^4.0.0"
     },
-    "name": "cloud-presser"
+    "name": "cloud-presser",
+    "version": "0.0.0"
 }
