--- a/packages/press-cli/package.json
+++ b/packages/press-cli/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@cloudpresser/expo-template": "^0.1.0",
+    "@cloudpresser/press-template": "^1.0.0",
     "deepmerge-json": "^1.1.0",
     "gluegun": "^4.5.0"
   },
